# RescueRobot-Movement_Detection

./: README.md  package.xml
CJT-RoboCupGermany-MovementDetection/: CMakeLists.txt  package.xml
CJT-RoboCupGermany-MovementDetection/src/: movement_detection.cpp
